tests/ui/default-should-be-used.stderr
error: use derive(Default) for enums
 --> tests/ui/default-should-be-used.rs:4:10
  |
4 | #[derive(DefaultBits)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `DefaultBits` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot find attribute `default` in this scope
 --> tests/ui/default-should-be-used.rs:7:7
  |
7 |     #[default]
  |       ^^^^^^^
  |
help: consider adding a derive
  |
3 + #[derive(Default)]
4 + #[bitsize(2)]
  |

error[E0277]: the trait bound `Inner: Default` is not satisfied
  --> tests/ui/default-should-be-used.rs:12:10
   |
12 | #[derive(DefaultBits)]
   |          ^^^^^^^^^^^ the trait `Default` is not implemented for `Inner`
   |
   = note: this error originates in the derive macro `DefaultBits` (in Nightly builds, run with -Z macro-backtrace for more info)
